基礎理論途中まで

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -949,6 +949,33 @@ IETFによってRFC 7519として標準化されている。
         }
 ```
 
+``` C#
+プロパティを特定したうえでの代入はできるんだったら、デリゲートをフルに使って何とかできなかったのか？と今更ながらに思う。
+
+var repreTemp = null;
+var sourceTemp = null;
+Action repre = null;
+Action source = null;
+
+foreach(frame){
+    // 現在の代表者の場所を求める
+    if (player1) {
+        repreTemp = player1;
+        repre = (obj) => player1 = obj;
+    }
+    // 今回押された場所を特定する
+    if (player3 == obj) {
+        sourceTemp = player3
+        source = (repre) => player3 = repre;
+    }
+}
+
+// 今回押された場所を代表者にする
+repre(obj); //or repre(sourceTemp);
+// 代表者だった場所に押された情報をいれる。
+source(repreTemp);
+```
+
 ---
 
 ## 雑記
@@ -958,15 +985,5 @@ avalon peninsula canada
 
 ・クエリエラー調査
 DISTINCTとワイルドカード `*` を併用したら.NETFrameworkで実行速度が遅くなるらしい
-
-
-今日で基礎理論の20問くらいまで行ってくれるとありがたい。  
-次の2連休で本番形式でやる。  
-さて、どうなっちゃうか。  
-
-1年の集大成だよなー。
-それが後2週間後。
-でも自信ないなー。
-もっと勉強していたい。  
 
 
