基礎理論完了、セキュリティ午後復習＆まとめ、他整理など

--- a/AppliedInformation/午後/H31S.md
+++ b/AppliedInformation/午後/H31S.md
@@ -2,6 +2,86 @@
 
 ---
 
+## セキュリティ ECサイトの利用者認証
+
+久しぶりにセキュリティやったけど意外と間違えた。  
+しかし12分で鼻くそほじりながらできる程度には精神安定剤足りえる。  
+簡単ではあるがもっと詰める必要があるということか。  
+
+``` txt 12分 6/9
+カ × ウ
+ア
+ウ
+
+ブルートフォース
+パスワードリスト
+パスワードを一定回数間違えたらロックする 0%
+→パスワード入力試行回数の上限値の設定
+
+ハッシュ化した値から元の値を類推できないため 100%
+他)ハッシュ値からパスワードの割り出しは難しいから
+イ × ア
+
+外部から不正アクセスによる通販事業の甚大な損害が発生する可能性 0%
+→他サイトから流出したパスワードによって、不正ログインされる
+
+---
+[1][1]
+本人認証は、知識ベースの認証(ナレッジベース認証とも呼ばれる)、所有物認証、生体認証に大別できます。
+
+〔aについて〕
+(ⅱ)は所有物認証に該当します。
+所有者認証は、正当な利用者が認証情報を持っていることをもとに認証を行う方式です。
+所有物認証の代表的な方式に、ICカードやPCに利用者のディジタル証明書を組込み、PKIによってその正当性を確認することで利用者認証を行う仕組みがあります。
+
+∴a＝ウ：ディジタル証明書
+
+→
+利用者の所有物にディジタル証明書は含まれない。
+これはサーバーが配布するモノであって、利用者が確認するもの。
+それが利用者を特定するモノにはならない。
+
+と、思っていた時期が僕にもありました。
+所有者情報としてあっていいものなんですねこれ・・・。
+割と知らなかった。
+ちゃんとメモっておこう。
+てか、ディジタル証明書ってなにさ？午前のほうにもまとめてなかったんだが？
+→
+デジタル署名が印鑑なら、デジタル証明書は印鑑証明みたいなモノらしい。
+で、デジタル証明書には本人情報も含まれるっぽいので、実質所有者の照明になるって理屈なのかな？
+それか、アクセスしてくる利用者が生成したデジタル証明書ってことかな。
+PKIに従うなら自身の秘密鍵で生成可能だしなぁ。
+
+
+
+[3][2]
+レインボー攻撃は、レインボーテーブルと呼ばれる、ハッシュ値からパスワードを特定するための逆引き表を用いて、パスワードを高速に解読する手法です。
+
+レインボーテーブル(以下、Rテーブル)は、使用される文字種と文字数の組合せごとに作成されます。解説対象となるパスワードの長さが長くなったり、使用可能な文字種が増えたりすると、全ての組合せを網羅するためのRテーブルのサイズも当然大きくなります。例えば、文字種が本問の通り70種、ソルトを加えた文字列長が60文字だったとすると、70^60種類のキー値を網羅するRテーブルの作成が必要になります。パスワードの長さは可変長であり、ソルトの長さも公開されていない状態で、幾つものRテーブルを作成するのは現実的に困難となります。したがって、十分な長さのソルト値を加えてからハッシュ化するのは、Rテーブルの作成を難しくするための対策になります。
+
+イ アカウント情報が窃取されてもソルトの値が不明だから
+→
+ソルトの値は認証情報データベースに登録されているため、アカウント情報が窃取されると当該アカウントのソルトの値を特定されてしまいます。
+
+∴ア：Rテーブルの作成が難しくなるから
+→
+ソルトと結合させるってことはソルトがわからない間は大丈夫じゃね？って思ったけど、盗まれた地点でこいつも盗まれるんだから意味ないって話か。
+それよりも桁数不明のソルトも含めたレインボーテーブル作成のほうが困難を極めるって方向のほうが正しかったか。
+
+
+[4]
+表1「パスワードに対する主な攻撃」の項番5の説明にあるように、複数のサイトで同じパスワードを使いまわしている利用者は、パスワードリスト攻撃により不正ログインの被害を受ける可能性があります。
+
+M社の立場に当てはめると、パスワードの使いまわしが行われると、セキュリティ強度の低い他サイトから流出したパスワードによって、M社サイトに対してパスワードリスト攻撃が試みられ、不正ログインされてしまうリスクがあるということです。
+
+∴他サイトから流出したパスワードによって，不正ログインされる
+
+→
+最初「他サイトから不正ログインされる」って書いたけど、短すぎたので盛大に持ったら逆にダメになった。
+```
+
+---
+
 ## プログラミング 券売機の注文の状態を判定するプログラム
 
 めっちゃ簡単だったので特にいうことはない。  
