出社前にセキュリティ１つ消化

--- a/AppliedInformation/午後/H30A.md
+++ b/AppliedInformation/午後/H30A.md
@@ -2,9 +2,55 @@
 
 ---
 
-## セキュリティ
+## セキュリティ インターネットサービス向けサーバのセキュリティ対策
 
-``` txt
+まぁ、セキュリティなんてこんなものでしょ。  
+本番でもこれくらいサクサクとければいいんだけどねぇ。  
+12分で終わったら相当なアドバンテージが取れる。  
+
+・FWを設定する場所  
+・最初からセキュリティの専門家を参加させるのは、ダメな暗号化通信を最初から使わせないため的な  
+
+``` txt 12分 11/11
+ウ
+キ
+診3
+
+エ
+カ
+FW
+Webサーバ
+SQLインジェクション
+
+イ
+ウ
+脆弱な暗号化通信を使うリスクを排除することができる 0%
+危殆化していない暗号化通信方式を採用するため
+→まぁ正解みたいなモノだろう。
+
+---
+
+[1]
+UDPスキャン,セッション管理については11.セキュリティにまとめた。
+最初セッション管理ではなく、ログ管理に仕様としたけど、Webアプリケーションならセッション管理できないとやばいよなと思ってこっちにした。
+
+
+[2][2]
+「各サーバで稼働するサービスへのアクセス制限は，ファイアウォール及び各サーバのOSがもつFW機能の両方で実施することになっている」と説明されていることに注目します。"脆2"はWebサーバで提供されるサービス(DBMS)の脆弱性なので、ファイアウォール及びWebサーバのOSがもつFW機能の両方でアクセス制限を施すことになります。
+
+→
+ちゃんと文中に書いてあった。
+
+[3]
+設問では解答に当たり「"脆3"で発見された脆弱性への対策として」という条件があるので、まず"脆3"の内容について確認します。
+"脆3"の脆弱性とは「脆弱な暗号化方式が使用できてしまう設定であった」ことであり、表4では、この発見された脆弱性に対して実施すべき対策(案)として「Webサーバのソフトウェアの設定を変更して，脆弱な暗号化方式を使用禁止にする。」という方法が提案されています。
+つまり、ソフトウェアの企画・設計段階からセキュリティの専門家を参加させる狙いとして、脆弱な暗号化方式の使用に関連することを答えるのが妥当であると判断できます。
+
+市販ソフトウェアでは、更新により強固な暗号化方式へのアップデートが行われるのが通常ですが、委託開発する自社ソフトウェアの場合には、このような更新は行われず、委託先企業のセキュア設計のレベルによっては脆弱な暗号化方式（近い将来に危殆化が予測されているものも含む）を採用することがないとは言えません。一度開発されたソフトウェアは中長期的にわたり使用されますから、将来的な展望や用途及びリスクを考慮した適切な暗号化方式を選択するために、セキュリティの専門家の意見を取り入れることは重要です。
+
+したがって、"脆3"の対策として企画・設計段階からセキュリティの専門家を参加させる狙いは、「危殆化していない暗号化通信方式を採用するため」が適切です。
+
+∴危殆化していない暗号化通信方式を採用するため
 ```
 
 ---
