--- a/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
+++ b/BasicInformation/午前/1.テクノロジ系/4.システム構成要素.md
@@ -396,6 +396,16 @@ VMWare
 
 Docker  
 
+### モノリシックカーネル
+
+モノリシックカーネルは、カーネル自体に多機能を持たせるアーキテクチャです。  
+(カーネルとはOSプログラムの中核を担う部分のことです)  
+
+### シストリックアレイ
+
+シストリックアレイは、多数のプロセッサとバッファの組をマトリクス上に結合して構築される並列計算機のアーキテクチャです。  
+個々のプロセッサの演算結果をレジスタに書き戻さず、次の演算の入力として隣のプロセッサへそのまま渡すことで、シンプルな回路設計、高い電力効率、高い演算性能を実現します。  
+
 ### グリッドコンピューティング
 
 インターネットなどのネットワーク上にある計算資源（CPUなどの計算能力や、ハードディスクなどの情報格納領域）を結びつけ、ひとつの複合したコンピュータシステムとしてサービスを提供する仕組みです。  
