・サービス完了 ・H30Sセキュリティ ・システム構成要素復習、セキュリティまとめ

--- a/AppliedInformation/午後/H30S.md
+++ b/AppliedInformation/午後/H30S.md
@@ -2,7 +2,58 @@
 
 ---
 
-## セキュリティ
+## セキュリティ マルウェア感染への対応
+
+1つだけポカミスした。  
+それ以外は特にない。  
+バックアップするときだけLANに接続するって問題はこれだった。  
+
+``` txt : 11分 8/9
+ア
+ク
+サ
+オ
+
+特定の文字列に変更された拡張子を持つファイルが他のPCに存在しないこと
+他)特定の文字列に変更された拡張子のファイルが他のPCやサーバにないこと (34文字)
+   最新のウイルス定義ファイルで，当該マルウェアが他に検出されないこと (33文字)
+   他のPCやサーバでマルウェアによる警告メッセージが表示されないこと (33文字)
+
+最新のウイルス定義になっていることを確認する 100%
+他)ウイルス定義ファイルのバージョンが最新であること (24文字)
+   ウイルス定義ファイルの更新日時が最新であること (23文字)
+   社内LANに接続し，手動でウイルス定義ファイルを更新したこと (30文字)
+ウ
+
+エ × ウ
+普段はLANから切断してバックアップするときだけ接続する 100%
+他)バックアップの時だけ共有ディスク装置を接続する
+   バックアップ時以外は社内LANから切り離す
+
+---
+
+[1]
+〔dについて〕
+モバイルPCがマルウェアに感染したのは、取引先で質問された情報を調べようとWebサイトを検索していたときと推察できます。これは、Webサイトの閲覧中に「突然警告メッセージが表示された」という説明、及び、社外への持出しからマルウェアの感染が発覚するまでにモバイルPCがインターネットに接続されたのは、このときしかないという事実から判断できます。K君は、自分でソフトウェアをダウンロードしませんが、モバイルPCの脆弱性を突いて、悪意のあるWebサイトへの接続を契機にマルウェアが秘密裏にダウンロードされたと考えられます。このように、Webサイトにマルウェアを仕込んでおき、アクセスした利用者に気付かれないように、それらのダウンロードや自動実行をさせる攻撃をドライブバイダウンロードといいます。
+→
+USBさして勝手に実行されるあれってイメージだったからちょっと迷ったけど、普通にアクセスしただけでダウンロードするタイプもこれでよかったのね。
+
+
+
+[3][1]
+マルウェアの中には、ネットワークを通じて、感染した端末から他の端末に感染を拡大させるタイプのものがあります。
+
+ランサムウェアは、たとえ金銭を支払ってもデータが元に戻る保証はなく、定期的なバックアップの取得とバックアップからの回復が最良の対策となります。J社はバックアップを社内LAN上の共有ディスクに保存していますが、もし、あるPCの感染を契機に社内LAN経由で共有ディスクにも感染が広がった場合、バックアップからの回復ができなくなってしまいます。
+S主任が、ファイルサーバ上のファイルのバックアップについて検討したのは、現状の運用ではマルウェアの感染時にバックアップデータまで暗号化されてしまう恐れがあるからです。
+
+∴ウ：ファイルサーバのバックアップ先にも，マルウェア感染の影響が及ぶおそれがあるから
+
+[3][2]
+マルウェアはネットワークを通じて感染を拡大させるので、ネットワークに未接続ならば他の端末から感染する可能性はゼロです。そして、共有ディスクはバックアップだけを目的としており、社内LANに常時接続している必要はありません。このため、「バックアップ取得時／回復時だけ社内LANに接続する」ように運用を改善すれば、マルウェア感染のリスクを低減できます。
+
+∴バックアップの時だけ共有ディスク装置を接続する
+　バックアップ時以外は社内LANから切り離す
+```
 
 ---
 
