--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -253,3 +253,42 @@ static async Task Sample1()
     Console.WriteLine("終わり");
 }
 ```
+
+---
+
+## Task.Run と Task.Factory.StartNew
+
+[Task.Run と Task.Factory.StartNew](http://outside6.wp.xdomain.jp/2016/08/04/post-205/)  
+
+``` C#
+Task thread1 = Task.Factory.StartNew(() => fun1());
+Task thread2 = Task.Factory.StartNew(() => fun2());
+```
+
+Task.Facotry.StartNewを一般的な用途でもっと手早く使うためにTask.Runが作られたようだ。  
+確かに、タイプ数が少ないし使い勝手が良い。自分も多用している。  
+ただ、Task.RunのTaskCreationOptionが「DenyChildAttach」なので、Task.Runの中でTask.Factory.StartNewを「AttachedToParent」で使っても無効になってしまうことには注意が必要。  
+また、Task.Runは手軽だけど細かい設定はできない。  
+Task.Factory.StartNewが不要になったわけではない。  
+
+---
+
+## 戻り値があるTaskの並列実行と結果の扱い方
+
+``` C#
+    Task<int> t1 = Task.Run(() => 1);
+    Task<int> t2 = Task.Run(() => 2);
+    Task<(int, int)> t3 = Task.Run(() => (3, 3));
+
+    Task.WaitAll(t1, t2, t3);
+
+    int result1 = t1.Result;
+    int result2 = t2.Result;
+    (int, int) result3 = t3.Result;
+
+    // Actionを返すTaskの定義方法
+    Task<Action> t1 = new Task<Action>(() =>
+    {
+        return () => { _ = 1; };
+    });
+```
