--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -139,3 +139,5 @@ if文は理解できるため、リストの代わりに「userName1」「userNa
 [[Nginx]どうしてもンギックスと呼びたい](https://qiita.com/yonhure/items/51f2e275f6dc9f550c93)  
 
 [staticおじさんの逆襲](https://qiita.com/minebreaker/items/45ffaaa5e8729e16cfb4)  
+
+[await って言う単語](https://ufcpp.net/blog/2018/1/await/)  
