--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -849,3 +849,28 @@ avalon peninsula canada
 DISTINCTとワイルドカード `*` を併用したら.NETFrameworkで実行速度が遅くなるらしい
 
 
+
+去年の今日はタイヤ交換をしたらしい。
+まぁ、妥当だとは思う。
+去年の今にそんなことができたのは、試験がなかったからだろう。
+なかったとして、今頃何してたっけ？
+いや、試験あったのでは？
+
+簿記→応用→101→基本→102→応用の流れなので試験あったはず。
+
+だとしたら、よくそんな悠長なことできたなって思う。
+今は試験以外のことなんて考えられない。
+やりたいことはたくさんあるけど、全部17日以降にやろうと思ってる。
+
+・タイヤ交換
+・冬靴を洗ってしまう
+・パソコン関係
+・整理整頓
+
+
+
+ワイパー交換完了。
+できるところからやっていかないとねぇ。
+ガソリンスタンドは7時からやっているらしいので、試験の時についでの給油は十分可能。
+
+
