少しまとめ

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -265,6 +265,21 @@ Task thread1 = Task.Factory.StartNew(() => fun1());
 Task thread2 = Task.Factory.StartNew(() => fun2());
 ```
 
+``` txt
+項目                 Task.Run       Task.Factory.StartNew             戻り値             備考
+
+CancellationToken    ○             ○                                -                  キャンセルに使うTokenを指定
+TaskCreationOptions  ×             ○                                -                  どのように作成するかを指定するオプション
+TaskScheduler        ×             ○                                -                  同期コンテキストを指定
+
+Action               ○             ○                                Task             
+Func<TResult>        ○             ○                                Task<TReuslt>   
+Action<object>       ×             ○                                Task             第2引数にOjbectが必須
+Func<Object,TResult> ×             ○                                Task<TReuslt>
+Func<Task>           ○             ×                                Task             入れ子のTaskの内側が戻る
+Func<Task<TResult>>  ○             ×                                Task<TReuslt>
+```
+
 Task.Facotry.StartNewを一般的な用途でもっと手早く使うためにTask.Runが作られたようだ。  
 確かに、タイプ数が少ないし使い勝手が良い。自分も多用している。  
 ただ、Task.RunのTaskCreationOptionが「DenyChildAttach」なので、Task.Runの中でTask.Factory.StartNewを「AttachedToParent」で使っても無効になってしまうことには注意が必要。  
